[tool.poetry]
name = "aioexec"
version = "0.5.0"
description = "asyncio executors, clean and simple. "
keywords = ["asyncio", "executors"]
authors = ["feluxe <felix@meyerwolters.de>"]
maintainers = ["feluxe <felix@meyerwolters.de>"]
repository = "https://github.com/feluxe/sty"
readme = "README.md"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
